--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,9 @@
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
+    --success: 142 71% 45%;
+    --success-foreground: 210 40% 98%;
+
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
 
@@ -61,6 +64,9 @@
     --secondary: 222.2 47.4% 11.2%;
     --secondary-foreground: 210 40% 98%;
 
+    --success: 142 71% 45%;
+    --success-foreground: 210 40% 98%;
+    
     --destructive: 0 63% 31%;
     --destructive-foreground: 210 40% 98%;
 
